Added classes to authentication views

--- a/views/authentication/forms/demo-login.hbs
+++ b/views/authentication/forms/demo-login.hbs
@@ -1,6 +1,7 @@
 <section id="loginarea" class="card">
-    <div class="card-block" data-step="2" data-intro="Sie möchten die {{theme.title}} entdecken? Mit Hilfe unserer Demo Funktion können Sie die {{theme.short_title}} sowohl aus Lehrer*in und Schüler*in Perspektive entdecken. (Fokus Demo Login)">
-        <h4 class="card-title">Demo</h4>
+    <div class="card-block" data-step="2"
+        data-intro="Sie möchten die {{theme.title}} entdecken? Mit Hilfe unserer Demo Funktion können Sie die {{theme.short_title}} sowohl aus Lehrer*in und Schüler*in Perspektive entdecken. (Fokus Demo Login)">
+        <h2 class="card-title h4">Demo</h2>
         <div class="card-text form-wrapper">
             {{> "lib/components/notification"}}
 
