--- a/views/files/search.hbs
+++ b/views/files/search.hbs
@@ -1,52 +1,49 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/files/files.css"/>
-        <link rel="stylesheet" href="/styles/files/search.css"/>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/files/files.css" />
+<link rel="stylesheet" href="/styles/files/search.css" />
+{{/content}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
-        <script src="/scripts/files.js" type="text/javascript" defer></script>
-        <script src="/scripts/jquery.cookie.js" type="text/javascript" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
+<script src="/scripts/files.js" type="text/javascript" defer></script>
+<script src="/scripts/jquery.cookie.js" type="text/javascript" defer></script>
+{{/content}}
 
-    {{#content "page"}}
-        <section class="search-parameters">
-            <form method="get">
-                <div class="search-wrapper">
-                    <div class="input-group input-group-lg">
-                        <input value="{{ query }}"
-                               name="q"
-                               type="text"
-                               class="form-control search-field file-search"
-                               placeholder="Dateien durchsuchen..."/>
-                    </div>
-                </div>
-                <button class="btn btn-primary float-right" type="submit">Suchen</button>
-			</form>
-		</section>
-		<section class="search-results">
-			{{#if query }}
-				{{#if files}}
-					<hr>
-					<h5>Suchergebnisse für "{{ query }}"</h5>
-				{{/if}}
-			{{else}}
-				{{#if files}}
-					<hr>
-					<h5>Suchergebnisse</h5>
-				{{/if}}
-			{{/if}}
-			{{#unless files}}{{#unless suppressNoResultsMessage}}
-				<hr>
-				<h5 class="text-muted text-center">
-					<span>Keine Suchergebnisse</span>
-				</h5>
-			{{/unless}}{{/unless}}
+{{#content "page"}}
+<section class="search-parameters">
+    <form method="get">
+        <div class="search-wrapper">
+            <div class="input-group input-group-lg">
+                <input value="{{ query }}" name="q" type="text" class="form-control search-field file-search"
+                    placeholder="Dateien durchsuchen..." />
+            </div>
+        </div>
+        <button class="btn btn-primary float-right" type="submit">Suchen</button>
+    </form>
+</section>
+<section class="search-results">
+    {{#if query }}
+    {{#if files}}
+    <hr>
+    <h2 class="h5">Suchergebnisse für "{{ query }}"</h5>
+        {{/if}}
+        {{else}}
+        {{#if files}}
+        <hr>
+        <h2 class="h5">Suchergebnisse</h2>
+        {{/if}}
+        {{/if}}
+        {{#unless files}}{{#unless suppressNoResultsMessage}}
+        <hr>
+        <h2 class="text-muted text-center h5">
+            <span>Keine Suchergebnisse</span>
+        </h2>
+        {{/unless}}{{/unless}}
 
-            {{#embed "files/file-viewer"}}{{/embed}}
-            {{#embed "files/files-grid"}}{{/embed}}
-        </section>
-    {{/content}}
+        {{#embed "files/file-viewer"}}{{/embed}}
+        {{#embed "files/files-grid"}}{{/embed}}
+</section>
+{{/content}}
 {{/extend}}
